css/styles.css
/* General Styles */
body {
  background-color: #f4f4f4;
  transition: background-color 0.5s, color 0.5s;
}

.navbar {
  background-color: #343a40;
}

.card {
  margin: 15px 7px;
}

.card img {
  max-width: 100%;
  height: auto;
}

.card-body {
  position: relative;
  text-align: center;
}

/* Image Hover Effects */
.img-and-button {
  position: relative;
}

.img-and-button img,
.img-and-button .btn-primary {
  transition: all 0.3s ease;
}

.img-and-button img:hover {
  transform: scale(1.05);
  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
  filter: brightness(0.7);
}

.img-and-button .btn-primary:hover {
  transform: none; /* No scaling for button */
}

.project-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  color: #ffffff;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  opacity: 0;
  transition: opacity 0.3s ease;
  font-size: 1.3rem;
  padding-left: 2.25rem;
  padding-right: 2.25rem;
}

.img-and-button:hover .project-overlay {
  opacity: 1;
}

.btn-primary {
  display: block;
  margin: 10px auto;
  width: fit-content;
  transition: all 0.3s ease;
}

/* Dark theme */
body.dark {
  background-color: #2d3236;
  color: #f4f4f4;
}

body.dark .navbar {
  background-color: #f4f4f4;
}

body.dark .navbar a,
body.dark .navbar button,
body.dark .navbar .navbar-brand {
  color: #f4f4f4;
}

body.dark .card {
  background-color: #464e56;
  color: #f4f4f4;
}

body.dark .card a {
  color: #f4f4f4;
}

/* Theme Toggle Button Styles */
#theme-toggle:hover {
  background-color: #dddddd;
}

body.dark #theme-toggle {
  background-color: #f4f4f4;
  color: #343a40;
  border-color: #343a40;
}

body.dark #theme-toggle:hover {
  background-color: #343a40;
  color: #f4f4f4;
}

